--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ img{
     max-width: 100%;
 }
 .contenedor {
+    width: 95%;
     max-width: 120rem; /* = 1200px*/
     margin: 0 auto;
 }
@@ -92,6 +93,12 @@ h4{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
+}
+@media (min-width: 768px) {
+    .contenido-header{
+        text-align: left;
+    }
 }
 .contenido-header h1{
     color: white;
@@ -100,22 +107,34 @@ h4{
     line-height: 1.8;
 }
 .barra{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding-top: 3rem;
+}
+@media (min-width: 76px) {
+    .barra{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 /** Navegación */
 .navegacion a {
     color: white;
     text-decoration: none;
-    font-size: 1.8rem; /* =18px */
-    margin-right: 2rem;
+    font-size: 2.2rem; /* =18px */
+    display: block;
 }
-.navegacion a:last-of-type{
-    margin: 0;
+@media (min-width: 768px) {
+    .navegacion a{
+        display: inline-block;
+        font-size: 1.8rem;
+        margin-right: 2rem;
+    }
+    .navegacion a:last-of-type{
+        margin: 0;
+    }
 }
+
 .navegacion a:hover{
     color: #71b100;
 }
@@ -126,32 +145,34 @@ h4{
         display: none;
 }
 /** Iconos nosotros */
-.iconos-nosotros{
-    display: flex;
-    justify-content: space-between;
-   
+@media (min-width: 768px) {
+    .iconos-nosotros{
+        display: flex;
+        justify-content: space-between;
+    }
 }
 .icono{
-    flex-basis: calc(33.3% - 1rem); 
+    
     text-align: center;
+}
+@media (min-width: 768px) {
+    .icono{
+    flex-basis: calc(33.3% - 1rem); }
 }
 .icono h3{
     text-transform: uppercase;
 }
 
 /** Anuncios */
-.contenedor-anuncios{
-    display: flex;
-    justify-content: space-between; /*esta mierda no sirveeeeeeeee*/
-    flex-wrap: wrap;
+@media (min-width: 768px) {
+    .contenedor-anuncios{
+        display: flex;
+        justify-content: space-between; /*esta mierda no sirveeeeeeeee*/
+        flex-wrap: wrap;
+    }
 }
+
 .anuncio{
-    flex-shrink: 0;
-    flex-basis: calc(33.3% - 1rem);
-    /*
-    Otra forma es para los valores de flex-grow, flex-shrink y flex-basis es:
-    flex: 0 0 calc(33.3% - 1rem);
-    */
     border-style: solid;
     border-color: #B5B5B5;
     border-width: 1px;
@@ -161,6 +182,16 @@ h4{
     */
     background-color: #F5F5F5;
     margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .anuncio{
+    flex-shrink: 0;
+    flex-basis: calc(33.3% - 1rem);
+    /*
+    Otra forma es para los valores de flex-grow, flex-shrink y flex-basis es:
+    flex: 0 0 calc(33.3% - 1rem);
+    */
+    }
 }
 .contenido-anuncio{
     padding: 2rem;
@@ -210,29 +241,36 @@ h4{
     font-size: 1.8rem;
 }
 /** Seccion inferior */
-.seccion-inferior{
+@media (min-width: 768px) {
+    .seccion-inferior{
+        display: flex;
+        justify-content: space-between;
+    }
+    .seccion-inferior .blog{
+        flex-basis: 60%;
+    }
+    .seccion-inferior .testimoniales{
+        flex-basis: calc(40% - 2rem);
+    }   
+}
+@media (min-width: 768px) {
+    .entrada-blog{
     display: flex;
-    justify-content: space-between;
-}
-.seccion-inferior .blog{
-    flex-basis: 60%;
-}
-.seccion-inferior .testimoniales{
-    flex-basis: calc(40% - 2rem);
+    justify-content: space-between;}
 }
 .entrada-blog{
-    display: flex;
-    justify-content: space-between;
     margin-bottom: 2rem; 
 }
 .entrada-blog last-of-type{
     margin-bottom: 0;
 }
-.entrada-blog .imagen{
-    flex-basis: 40%;
-}
-.entrada-blog .texto-entrada{
-    flex-basis: calc(60% - 3rem);
+@media (min-width: 768px) {
+    .entrada-blog .imagen{
+        flex-basis: 40%;
+    }
+    .entrada-blog .texto-entrada{
+        flex-basis: calc(60% - 3rem);
+    }
 }
 .texto-entrada a{
     color: black;
@@ -287,23 +325,83 @@ h4{
 }
 .contenedor-footer{
     padding: 3rem 0;
-    display: flex;
-    justify-content: space-between;
+    text-align: center;
+
+}
+@media (min-width: 768px) {
+    .contenedor-footer{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+.site-footer nav{
+    display: none;
+}
+@media (min-width: 768px) {
+    .site-footer nav{
+        display: block;
+    }
 }
 .copyright{
     margin: 0;
     color: #ffffff;
 }
 
-/** Navegación **/
-.contenido-nosotros{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 2rem;
-} 
+/** Internas - Nosotros **/
+@media (min-width: 768px) {
+    .contenido-nosotros{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-column-gap: 2rem;
+    } 
+}
 .texto-nosotros blockquote{
     font-weight: 900;
     font-size: 2rem;
     margin: 0;
     padding: 1rem 0 3rem 0;
+}
+
+/** Contacto **/
+.contacto p{
+    font-size: 1.4rem;
+    color: #4f4f4f;
+    margin: 2rem 0 0 0;
+}
+legend{
+    font-size: 2.4rem;
+    color: #4f4f4f;
+}
+label{
+    font-weight: 700;
+    text-transform: uppercase;
+    display: block;
+}
+input:not([type="submit"]),
+textarea,
+select {
+    padding: 1rem;
+    display: block;
+    width: 98%;
+    background-color: #e1e1e1;
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 1rem;
+}
+input[type ="radio"]{
+    width: auto;
+    margin: 0;
+}
+select{
+    -webkit-appearance: none;
+    appearance: none;
+}
+textarea{
+    height: 20rem;
+}
+.forma-contacto{
+    max-width: 30rem;   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
